# wandering_soul_v2

./: .gitignore  CMakeLists.txt  README.md
assets/: assets.json  fog.frag  fragment.frag  lightning.frag  manaOrb.frag  manaOrb.vert  map_test.json  player_assets.json  wandering_soul_tileset.json
assets/images/: player_idle.ase  player_run.ase
assets/images/animations/: config.json  config2.json  particle_config.json  pparticle_config.json
assets/levels/: end.json  entrance.json  level-1.json  level-2.json  level-3.json
src/: animation.cpp  asset_manager.cpp  collision_utils.cpp  enemy.cpp  entity.cpp  main.cpp  mana.cpp  particle_system.cpp  player.cpp  spark.cpp  text.cpp  tilemap.cpp  utils.cpp  xml_parser.cpp
src/headers/: animation.hpp  asset_manager.hpp  collision_utils.hpp  enemy.hpp  entity.hpp  light.hpp  mana.hpp  particle_system.hpp  player.hpp  spark.hpp  text.hpp  tilemap.hpp  utils.hpp  xml_parser.hpp
